Bug 111509 - [regression][bisected] piglit.spec.ext_image_dma_buf_import.ext_image_dma_buf_import-export fails on iris
Summary: [regression][bisected] piglit.spec.ext_image_dma_buf_import.ext_image_dma_buf...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/Iris (show other bugs)
Version: git
Hardware: Other All
: not set not set
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2019-08-28 19:49 UTC by Clayton Craft
Modified: 2019-08-28 21:21 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Clayton Craft 2019-08-28 19:49:06 UTC
This test fails on all platforms supported by iris.

stdout from test:
    planes mismatch, got 1 expected 2


Bisected to this commit:


commit 7404833c2e3227b61f53ad93b0e3a1a4d545c05f
Author: Mike Blumenkrantz <michael.blumenkrantz@gmail.com>
Date:   Wed May 29 17:14:32 2019 -0400

    gallium: add handling for YUV planar surfaces

    st/dri:
    this adds a table (similar to the one in i965) which provides
    mappings for turning various planar formats into multiple sampler views.
    whereas only NV12 and IYUV were supported, now many more formats are
    supported here:
    * P0XX
    * YUV4XX
    * YVU4XX
    * AYUV
    * XYUV
    * YUYV
    * UYVY

    the table is used directly to handle image creation, simplifying
    a lot of code and resolving related TODO/FIXME items where workarounds were
    previously in place to manage NV12 and IYUV formats exclusively

    st/mesa:
    the changes here relate to setting up samplers for the planar formats.
    this requires:
    * checking for driver support for all the sampler formats
    * creating the samplers with the corresponding formats and swizzling
    * running nir_lower_tex with the appropriate options to trigger the lowering
      for each plane->sampler

    fixes kwg/mesa#36

    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
Comment 1 Kenneth Graunke 2019-08-28 19:54:58 UTC
This is easy, with Jordan's new resource_get_param hook we just need to loop and actually count the planes.  Testing a fix in CI now.
Comment 2 Kenneth Graunke 2019-08-28 21:21:42 UTC
Fix submitted:

https://gitlab.freedesktop.org/mesa/mesa/merge_requests/1795


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.